--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="activity_hotizontal_margin">16dp</dimen>
+    <dimen name="tagged_searches_padding">8dp</dimen>
 </resources>
